# cluaize-hub

./: .gitignore  CONTRIBUTING.md  README.md  registry.json
.github/scripts/: hub-matrix-builder.py
.github/workflows/: build-extension-search.yml  master-hub-builder.yml  release-skills.yml
Extensions/: README.md
Extensions/cluaize-db/: README.md  SKILL.md  manifest-extension.yaml
Extensions/cluaize-db/native/: Cargo.toml
Extensions/cluaize-db/native/src/: lib.rs
Extensions/cluaize-math/: Cargo.toml  README.md  SKILL.md  manifest-extension.yaml  manifest-plugin.yaml
Extensions/cluaize-search/: Cargo.toml  README.md  SKILL.md  manifest-extension.yaml  package.json  rust_search_best ai tools now.json
Extensions/cluaize-search/examples/: fetch_demo.rs  interactive_search.rs
Extensions/cluaize-search/references/: search_heuristics.md
Extensions/cluaize-search/scripts/: deep_search_macro.cel  fast_query_macro.cel
Extensions/cluaize-search/src/: config.rs  lib.rs
Extensions/cluaize-search/src/parser/: mod.rs  ranker.rs
Extensions/cluaize-search/tests/: cel_language_test.rs  fuck your wordk ai.txt  integration_test.rs  yaml_parser_test.rs
Extensions/cluaize-search/tests/output/: test_fetch_invalid_url.txt  test_fetch_valid_url.txt  test_fetch_youtube_zero_bloat.txt  test_query_searxng_with_system_bindings.txt  test_stripper_advanced_rules.txt
doc/: registry.json
doc/architecture/: build-pipeline.md  manifest_architecture.md  skill_architecture.md
extensions/: README.md  family.json
plugins/: README.md
scripts/: build_registry.py
(+75 files in other folders)
