[package]
name = "cluaize-search"
version = "0.1.0"
edition = "2021"
authors = ["Cluaiz Technologies"]
description = "Native metasearch plugin for Cluaize engine"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "time", "net", "io-util"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
scraper = "0.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = "2.1.3"
async-trait = "0.1.89"
futures = "0.3.32"
serde_yaml = "0.9.34"

[dev-dependencies]
